--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
